--- a/daily-task-8/dtask-8.html
+++ b/daily-task-8/dtask-8.html
@@ -34,6 +34,7 @@
 		</div>	
 	</section>
 	<section class="banner">
+		<div class="blur"></div>
 		<div class="container">
 			<div class="b1">
 				<div class="icon">
