--- a/full-page-task/index.html
+++ b/full-page-task/index.html
@@ -72,6 +72,102 @@
             </div> 
         </div>
     </section>
+    <section class="about">
+        <div class="container">
+            <div class="ahead">
+                <h1>ABOUT US</h1>
+                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem.</p>
+            </div>
+            <div class="about-content">
+                <div class="about-content1">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <div class="apara2">
+                    <p><i class="icofont-tick-boxed"></i>Ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                    <p><i class="icofont-tick-boxed"></i>Duis aute irure dolor in reprehenderit in voluptate velit</p>
+                    <p><i class="icofont-tick-boxed"></i>Ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                </div>
+                </div>
+                <div class="about-content2">
+                    <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <button class="aboutbtn">Learn More</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="achivements">
+        <div class="container">
+            <div class="achiveflex">
+                <div>
+                    <h1>75</h1>
+                    <p>Happy Clients</p>
+                </div>
+                <div>
+                    <h1>85</h1>
+                    <p>Projects</p>
+                </div>
+                <div>
+                    <h1>30</h1>
+                    <p>Years of experience</p>
+                </div>
+                <div>
+                    <h1>20</h1>
+                    <p>Awards</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="review">
+        <div class="container">
+            <div class="reviewflex">
+                <div class="reviewimg">
+                   <div class="reimg">
+                         <img src="image/about-video.jpg" alt="">
+                     </div> 
+                </div>
+                <div class="reviewcontent">
+                    <h2> Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p><i class="icofont-tick-boxed"></i>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p><i class="icofont-tick-boxed"></i>Duis aute irure dolor in reprehenderit in voluptate velit.</p>
+                    <p><i class="icofont-tick-boxed"></i>Voluptate repellendus pariatur reprehenderit corporis sint.</p>
+                    <p><i class="icofont-tick-boxed"></i>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</p>
+                    <p class="rp">Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="brand">
+        <div class="container">
+            <div class="brandflex">
+                <div class="clint1"> 
+                    <img src="../full-page-task/clients/client-1.png" alt="">
+                </div>
+                <div class="clint1"> 
+                    <img src="../full-page-task/clients/client-2.png" alt="">
+                </div>
+                <div class="clint1"> 
+                    <img src="../full-page-task/clients/client-3.png" alt="">
+                </div>
+                <div class="clint1"> 
+                    <img src="../full-page-task/clients/client-4.png" alt="">
+                </div>
+                <div class="clint1"> 
+                    <img src="../full-page-task/clients/client-5.png" alt="">
+                </div>
+                <div class="clint1"> 
+                    <img src="../full-page-task/clients/client-6.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="testimonials">
+        <div class="container">
+            <div class="testhead">
+                <h1>TESTIMONIALS</h1>
+                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
