--- a/full-page-task/index.html
+++ b/full-page-task/index.html
@@ -166,6 +166,34 @@
                 <h1>TESTIMONIALS</h1>
                 <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
             </div>
+            <div class="testflex">
+                <div class="tlist1">
+                    <p> <sup> <i class="icofont-quote-left"></i></sup>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident<sub><i class="icofont-quote-right"></i></sub></p>
+                    <img src="../full-page-task/testimonals/testimonials-1.jpg" alt="">
+                    <h4>Saul Goodman</h4>
+                    <h6>Ceo & Founder</h6>
+                </div>
+                <div class="tlist1">
+                    <p><sup><i class="icofont-quote-left"></i></sup>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident<sub><i class="icofont-quote-right"></i></sub></p>
+                    <img src="../full-page-task/testimonals/testimonials-2.jpg" alt="">
+                    <h4>Ada Shelby</h4>
+                    <h6>Entrepreneur</h6>
+                    <div class="cflex">
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle1"></div>
+                        <div class="circle"></div>
+                    </div>
+                </div>
+                <div class="tlist1">
+                    <p><sup><i class="icofont-quote-left"></i></sup> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident<sub><i class="icofont-quote-right"></i></sub></p>
+                    <img src="../full-page-task/testimonals/testimonials-3.jpg" alt="">
+                    <h4>Lizzie gray</h4>
+                    <h6>Freelancer</h6>
+                </div>
+
+            </div>
         </div>
     </section>
 </body>
