--- a/full-page-task/index.html
+++ b/full-page-task/index.html
@@ -238,6 +238,15 @@
             </div>
         </div>
     </section>
+    <section class="action">
+        <div class="container">
+            <div class="actioncontent">
+                <h1>Call To Action</h1>
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <button class="cbtn">Call To Action</button>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
