--- a/full-page-task/index.html
+++ b/full-page-task/index.html
@@ -415,7 +415,7 @@
                         <h4><i class="icofont-question-circle"></i>Non consectetur a erat nam at lectus urna duis?</h4>
                     </div>
                     <div><i class="icofont-curved-down"></i></div>
-            </div>           
+                </div>
             </div>
             <div class="faqlist">
                 <div class="faqlist-1">
@@ -423,7 +423,7 @@
                         <h4><i class="icofont-question-circle"></i>Non consectetur a erat nam at lectus urna duis?</h4>
                     </div>
                     <div><i class="icofont-curved-down"></i></div>
-            </div>           
+                </div>
             </div>
             <div class="faqlist">
                 <div class="faqlist-1">
@@ -431,7 +431,7 @@
                         <h4><i class="icofont-question-circle"></i>Non consectetur a erat nam at lectus urna duis?</h4>
                     </div>
                     <div><i class="icofont-curved-down"></i></div>
-            </div>           
+                </div>
             </div>
             <div class="faqlist">
                 <div class="faqlist-1">
@@ -439,7 +439,7 @@
                         <h4><i class="icofont-question-circle"></i>Non consectetur a erat nam at lectus urna duis?</h4>
                     </div>
                     <div><i class="icofont-curved-down"></i></div>
-            </div>           
+                </div>
             </div>
             <div class="faqlist">
                 <div class="faqlist-1">
@@ -447,7 +447,89 @@
                         <h4><i class="icofont-question-circle"></i>Non consectetur a erat nam at lectus urna duis?</h4>
                     </div>
                     <div><i class="icofont-curved-down"></i></div>
-            </div>           
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="contact">
+        <div class="container">
+            <div class="chead">
+                <h1>CONTACT</h1>
+                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+                    consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
+                    fugiat sit in iste officiis commodi quidem hic quas.
+                </p>
+            </div>
+            <div class="map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3941.420761114923!2d77.25889801463951!3d8.933317893587299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b042a4858f2357d%3A0xf078779a4451e4ce!2sTirunelveli%2C%20Tamil%20Nadu%20627802!5e0!3m2!1sen!2sin!4v1663324392778!5m2!1sen!2sin"
+                    width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="formflex">
+                <div class="c1">
+                    <div class="locationflex">
+                        <div class="licon1">
+                            <i class="icofont-location-pin"></i>
+                        </div>
+                        <div class="location">
+                            <h2>Location:</h2>
+                            <p>A108 Adam Street, New York, NY 535022</p>
+                        </div>
+                    </div> 
+                    <div class="locationflex">   
+                        <div class="licon1">
+                            <i class="icofont-location-pin"></i>
+                        </div>
+                        <div class="location">
+                            <h2>Email:</h2>
+                            <p>info@example.com</p>
+                        </div>
+                    </div>
+                    <div class="locationflex">    
+                        <div class="licon1">
+                            <i class="icofont-location-pin"></i>
+                        </div>
+                        <div class="location">
+                            <h2>Call:</h2>
+                            <p>+1 5589 55488 55s</p>
+                        </div>
+                    </div>    
+                    
+                </div>
+                <div class="c2">
+                    <div class="formr1">
+                        <div class="yourname">
+                            <input type="text" placeholder="Your Name">
+                        </div>
+                        <div class="youremail">
+                            <input type="text" placeholder="Your Email">
+                        </div>
+                    </div>
+                    <div class="formrr2">
+                        <input type="text" placeholder="subject">
+                    </div>
+                    <div class="address">
+                        <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+                    </div>
+                    <div class="formbtn">
+                        <button>Send Message</button>
+                    </div>
+                </div>                
+            </div>
+        </div>
+    </section>
+    <section class="footer1">
+        <div class="container">
+            <div class="footer1flex">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div class="join">
+                    <h3>Join Our Newsletter</h3>
+                    <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+                    <input type="text"><button>Subscribe</button>
+                </div>
             </div>
         </div>
     </section>
