--- a/full-page-task/index.html
+++ b/full-page-task/index.html
@@ -522,9 +522,32 @@
     <section class="footer1">
         <div class="container">
             <div class="footer1flex">
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
+                <div class="fc1">
+                    <h3>OnePage</h3>
+                    <p>A108 Adam Street <br>New York, NY 535022 <br>United States</p>
+                    <div class="info1">
+                        <p><b>Phone:</b>+1 5589 55488 55</p>
+                        <p><b>Email:</b>info@example.com</p>
+                    </div>
+                </div>
+                <div class="fc2">
+                    <h4>Useful Links</h4>
+                    <p><i class="icofont-curved-right"></i>Home</p>
+                    <p><i class="icofont-curved-right"></i>About us</p>
+                    <p><i class="icofont-curved-right"></i>Services</p>
+                    <p><i class="icofont-curved-right"></i>Terms of service</p>
+                    <p><i class="icofont-curved-right"></i>Privacy policy</p>
+                    
+                </div>
+                <div class="fc2">
+                    <h4>Our Services</h4>
+                    <p><i class="icofont-curved-right"></i>Web Design</p>
+                    <p><i class="icofont-curved-right"></i>Web Development</p>
+                    <p><i class="icofont-curved-right"></i>Product Management</p>
+                    <p><i class="icofont-curved-right"></i>Marketing</p>
+                    <p><i class="icofont-curved-right"></i>Graphic Design</p>
+                    
+                </div>
                 <div class="join">
                     <h3>Join Our Newsletter</h3>
                     <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
