--- a/full-page-task/index.html
+++ b/full-page-task/index.html
@@ -531,7 +531,7 @@
                     </div>
                 </div>
                 <div class="fc2">
-                    <h4>Useful Links</h4>
+                    <h3>Useful Links</h3>
                     <p><i class="icofont-curved-right"></i>Home</p>
                     <p><i class="icofont-curved-right"></i>About us</p>
                     <p><i class="icofont-curved-right"></i>Services</p>
@@ -540,7 +540,7 @@
                     
                 </div>
                 <div class="fc2">
-                    <h4>Our Services</h4>
+                    <h3>Our Services</h3>
                     <p><i class="icofont-curved-right"></i>Web Design</p>
                     <p><i class="icofont-curved-right"></i>Web Development</p>
                     <p><i class="icofont-curved-right"></i>Product Management</p>
@@ -554,6 +554,33 @@
                     <input type="text"><button>Subscribe</button>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="footer2">
+        <div class="container">
+            <div class="footer2flex">
+            <div class="copyrights">
+                <p>© Copyright <b>OnePage</b>. All Rights Reserved</p>
+                <p>Designed by <a href="">BootstrapMade</a></p>
+            </div>
+            <div class="ficon">
+                <div class="ficon1">
+                    <i class="icofont-twitter"></i>
+                </div>
+                <div class="ficon1">
+                    <i class="icofont-facebook"></i>
+                </div>
+                <div class="ficon1">
+                    <i class="icofont-instagram"></i>
+                </div>
+                <div class="ficon1">
+                    <i class="icofont-skype"></i>
+                </div>
+                <div class="ficon1">
+                    <i class="icofont-linkedin"></i>
+                </div>
+            </div>
+        </div>
         </div>
     </section>
 </body>
