--- a/full-page-task/index.html
+++ b/full-page-task/index.html
@@ -19,15 +19,15 @@
                 </div>
                 <div class="navi">
                     <ul>
-                        <li>Home</li>
-                        <li>About</li>
-                        <li>Services</li>
-                        <li>Portfolio</li>
-                        <li>Team</li>
-                        <li>Pricing</li>
-                        <li>DropDown<i class="icofont-caret-down"></i></li>
-                        <li>Contact</li>
-                        <li><button class="btn1">Get Started</button></li>
+                        <li><a href="">Home</a> </li>
+                        <li><a href="">About</a> </li>
+                        <li><a href="">Services</a> </li>
+                        <li><a href="">Portfolio</a> </li>
+                        <li><a href="">Team</a> </li>
+                        <li><a href="">Pricing</a> </li>
+                        <li><a href="">DropDown<i class="icofont-caret-down"></i></a> </li>
+                        <li><a href="">Contact</a> </li>
+                        <li><button class="btn1"><a href="">Get Started</a> </button></li>
                     </ul>
                 </div>
             </div>
